--- a/Sass/Layouts/_Animated.scss
+++ b/Sass/Layouts/_Animated.scss
@@ -91,6 +91,10 @@
 .animated__container {
     width: 100%;
     height: 100%;
+    background-image: url("./Media/Image/Hero/Planing.jpg");
+    background-position: right center;
+    background-size: cover;
+    background-repeat: no-repeat;
     div {
         padding: 1rem;
         color: white;
@@ -104,28 +108,28 @@
     }
     .animated__content1 {
         position: absolute;
-        top: 3rem;
+        top: 0;
         left: 0;
         animation: animcont1 1s 3.5s ease-in-out forwards;
         border-radius: 0 0 3rem 0rem;
     }
     .animated__content2 {
         position: absolute;
-        top: 3rem;
-        right: -3rem;
+        top: 0;
+        right: 0;
         animation: animcont1 1s 4.8s ease-in-out forwards;
         border-radius: 0 0 0rem 3rem;
     }
     .animated__content3 {
         position: absolute;
-        bottom: 3rem;
-        right: -3rem;
+        bottom: 0;
+        right: 0;
         animation: animcont1 1s 6.1s ease-in-out forwards;
         border-radius: 3rem 0 0rem 0rem;
     }
     .animated__content4 {
         position: absolute;
-        bottom: 3rem;
+        bottom: 0;
         left: 0;
         animation: animcont1 1s 8s ease-in-out forwards;
         border-radius: 0 3rem 0rem 0rem;
