--- a/Sass/Layouts/_Hero.scss
+++ b/Sass/Layouts/_Hero.scss
@@ -1,14 +1,11 @@
 @import "../Ultility/variable";
 @import "../Layouts/Animated" ;
 .hero {
+  margin: 5% auto ; 
   @include grid-gtc-2(1fr, 1fr);
-  background-image: url("./Media/Image/Hero/Planing.jpg");
-  background-position: right center;
-  background-size: 50% 90%;
-  background-repeat: no-repeat;
   padding: 0 2em;
-  height: 90vh;
-  background-color: $light--clr;
+  align-items: center;
+  gap: 5rem;
   .hero__container {
     padding: 1em 2em 0 2em;
     @include dsply-column-cntr(flex-start,center) ; 
