--- a/Sass/Layouts/_Animated.scss
+++ b/Sass/Layouts/_Animated.scss
@@ -94,6 +94,7 @@
         @include dsply-flex-cntr-cntr ; 
         height: 15rem;
         text-align: center;
+        overflow: hidden;
         span {
             padding: 1rem;
         }
@@ -102,45 +103,52 @@
         position: absolute;
         top: 0;
         left: 0;
-        animation: animcont1 1s ease-in-out forwards;
+        animation: animcont1 .8s cubic-bezier(0,2.22,.21,.91) forwards;
         border-radius: 0 0 3rem 0rem;
         overflow: hidden;
+        transform: translateY(-100%);
         span {
-            height: 100%;
-            transform: translateY(calc(100% + 1rem));
-        }
-        &::after {
-            position: absolute;
-            background-color: red;
-            width: 100%;
-            height: 100%;
-            z-index: +1;
-            content: "";
-            display: table;
-            clear: both;
-            transform: translateY(-100%);
+            transform: translateY(calc(150%));
+            animation: animationdooropen .5s 1s cubic-bezier(0,2.22,.21,.91) forwards;
         }
     }
     .animated__content2 {
         position: absolute;
         top: 0;
         right: 0;
-        animation: animcont1 1s 4.8s ease-in-out forwards;
-        border-radius: 0 0 0rem 3rem;
+        animation: animcont1 .8s 1s cubic-bezier(0,2.22,.21,.91) forwards;
+        border-radius: 0 0rem 0 3rem;
+        overflow: hidden;
+        transform: translateY(-100%);
+        span {
+            transform: translateY(calc(150%));
+            animation: animationdooropen .5s 2s cubic-bezier(0,2.22,.21,.91) forwards;
+        }
     }
     .animated__content3 {
         position: absolute;
         bottom: 0;
         right: 0;
-        animation: animcont1 1s 6.1s ease-in-out forwards;
+        animation: animcont2 .8s 2s cubic-bezier(0,2.22,.21,.91) forwards;
         border-radius: 3rem 0 0rem 0rem;
+        overflow: hidden;
+        transform: translateY(100%);
+        span {
+            transform: translateY(calc(150%));
+            animation: animationdoorclose .5s 3s cubic-bezier(0,2.22,.21,.91) forwards;
+        }
     }
     .animated__content4 {
         position: absolute;
         bottom: 0;
         left: 0;
-        animation: animcont1 1s 8s ease-in-out forwards;
+        animation: animcont2 .8s 3s cubic-bezier(0,2.22,.21,.91) forwards;
         border-radius: 0 3rem 0rem 0rem;
+        transform: translateY(100%);
+        span {
+            transform: translateY(calc(-150%));
+            animation: animationdoorclose .5s 4s cubic-bezier(0,2.22,.21,.91) forwards;
+        }
     }
 }
 
@@ -158,5 +166,29 @@
     }
     100%{
         transform: translateY(0);
+    }
+}
+@keyframes animcont2 {
+    0%{
+        transform: translateY(100%);
+    }
+    100%{
+        transform: translateY(0);
+    }
+}
+@keyframes animationdooropen {
+    0%{
+        transform: translateY(100%);
+    }
+    100%{
+        transform: translateY(0%);
+    }
+}
+@keyframes animationdoorclose {
+    0%{ 
+        transform: translateY(-100%);
+    }
+    100%{
+        transform: translateY(0%);
     }
 }
