--- a/Sass/Ultility/_variable.scss
+++ b/Sass/Ultility/_variable.scss
@@ -44,6 +44,7 @@ $dark--clr : black ;
 $light--clr : white ;
 $primary--clr : rgb(187, 30, 255) ; 
 $font-size-small : 1.5rem ;
+$font-size-sup-small : 1.7rem ;
 $font-size-up-small : 1.8rem ;
 $font-size-normal : 2rem ;  
 $font-size-large : 2.7rem ;
