--- a/Style.css
+++ b/Style.css
@@ -704,7 +704,7 @@ li {
 }
 
 .hero {
-  margin: 5% auto;
+  margin: 3% auto 5% auto;
   -ms-grid-columns: 1fr 1fr;
       grid-template-columns: 1fr 1fr;
   display: -ms-grid;
@@ -777,16 +777,25 @@ li {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  -webkit-transition: all .3s ease-in-out;
+  transition: all .3s ease-in-out;
 }
 
 .hero .hero__container .hero__type--selector .hero__button i {
   margin-left: 1.5em;
 }
 
+.hero .hero__container .hero__type--selector .hero__button:hover {
+  -webkit-box-shadow: inset 0rem 0rem 5rem -4rem #bb1eff;
+          box-shadow: inset 0rem 0rem 5rem -4rem #bb1eff;
+}
+
+.hero .hero__container .hero__type--selector .hero__button:hover .demo__container {
+  -webkit-transform: scaleY(1);
+          transform: scaleY(1);
+}
+
 .hero .hero__container .hero__type--selector .hero__button .demo__container {
-  width: -webkit-max-content;
-  width: -moz-max-content;
-  width: max-content;
   position: absolute;
   height: -webkit-max-content;
   height: -moz-max-content;
@@ -794,8 +803,6 @@ li {
   color: black;
   top: 100%;
   left: 0;
-  background-color: red;
-  border: 0.1rem solid #bb1eff;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -809,6 +816,13 @@ li {
   -webkit-box-pack: space-evenly;
       -ms-flex-pack: space-evenly;
           justify-content: space-evenly;
+  -webkit-transform-origin: top;
+          transform-origin: top;
+  -webkit-transform: scaleY(0);
+          transform: scaleY(0);
+  -webkit-transition: all .5s ease-in-out;
+  transition: all .5s ease-in-out;
+  z-index: +1;
 }
 
 .hero .hero__container .hero__type--selector .hero__button .demo__container ul {
@@ -825,10 +839,52 @@ li {
   -webkit-box-pack: space-evenly;
       -ms-flex-pack: space-evenly;
           justify-content: space-evenly;
+  margin-top: 1rem;
+  border: 0.3rem solid #bb1eff;
+  background-color: white;
+  padding: 1rem 2rem 0 0;
+  border-radius: 1rem;
+  width: 38rem;
+  z-index: +2;
+  -webkit-box-shadow: inset 0rem 0rem 5rem -2rem #bb1eff;
+          box-shadow: inset 0rem 0rem 5rem -2rem #bb1eff;
 }
 
 .hero .hero__container .hero__type--selector .hero__button .demo__container ul li {
-  padding: .5rem 0 .5rem 1rem;
+  padding: .5rem 2rem .5rem 1rem;
+  font-size: 1.7rem;
+  -webkit-transition: all .3s ease-in-out;
+  transition: all .3s ease-in-out;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  z-index: +4;
+}
+
+.hero .hero__container .hero__type--selector .hero__button .demo__container ul li::before {
+  content: "";
+  display: table;
+  clear: both;
+  width: 0rem;
+  border-bottom: .15rem solid black;
+  -webkit-transition: all .2s ease-in-out;
+  transition: all .2s ease-in-out;
+}
+
+.hero .hero__container .hero__type--selector .hero__button .demo__container ul li:hover {
+  -webkit-transform: translateX(1%);
+          transform: translateX(1%);
+  font-weight: 600;
+}
+
+.hero .hero__container .hero__type--selector .hero__button .demo__container ul li:hover:before {
+  width: 3rem;
 }
 
 .hero .hero__container .hero__type--selector .hero__device--type {
