--- a/Sass/Layouts/_Feature.scss
+++ b/Sass/Layouts/_Feature.scss
@@ -2,14 +2,36 @@
 @import '../Ultility/variable' ;
 .feature{
     margin: 15em 0;
+    margin-top: 7rem;
     display: flex;
     .featuer__container {
-        @include grid-gtc-2(1fr , 1fr) ; 
-        margin: 1.5em 2.5em;
+        display: grid;
+        grid-template-columns: repeat(auto-fit , minmax(47% , 1fr));
+        gap: 5rem;
+        margin: 1.5em auto;
         width: 100%;
+        padding: 2rem 0;
+        background-color: rgba(226, 226, 226, 0.589);
+
+        &::before{
+            content: "";
+            display: table;
+            clear: both;
+            position: absolute;
+            width: 50%;
+            height: 100%;
+            left: 0;
+            background-color: $primary--clr;
+            border-radius: 20rem 15rem 18rem 28rem / 19rem 12rem 22rem 22rem;
+            animation: glovyanimation 8s linear infinite;
+            z-index: -1;
+            rotate: -10deg;
+        }
         .phone__container{
             display: flex;
-            justify-content: flex-end;
+            justify-content: center;
+            align-items: center;
+            align-items: center;
             .feature__phone{
                 display: flex;
                 flex-direction: column;
@@ -19,7 +41,6 @@
                 border-radius: 1rem;
                 border: .1rem solid black;
                 top: -4rem;
-                margin-right: 7em;
                 align-items: flex-end;
                 transition: all .8s ease-in-out;
             &:hover {
@@ -154,5 +175,22 @@
     100%{
         transform: translateX(0rem);
         opacity: 1;
+    }
+}
+@keyframes glovyanimation {
+    0%{
+        border-radius: 20rem 15rem 38rem 68rem / 19rem 12rem 22rem 22rem;
+    }
+    25%{
+        border-radius: 68rem 60rem 45rem 50rem / 15rem 27rem 40rem 50rem;
+    }
+    50%{
+        border-radius: 55rem 60rem 30rem 60rem / 19rem 37rem 34rem 35rem;
+    }
+    75%{
+        border-radius: 65rem 70rem 40rem 50rem / 19rem 47rem 54rem 55rem;
+    }
+    100%{
+        border-radius: 20rem 15rem 38rem 68rem / 19rem 12rem 22rem 22rem;
     }
 }
